Since JDK 23 the security manager isn't available by default
This is related to changes made in
de64b5ec1fff9b1023fd00452dd80cc927e68e76 where the docker image and the
product test configurations were updated.