@@ -139,6 +139,8 @@ The following provides a good starting point for creating `etc/jvm.config`:
 -Dfile.encoding=UTF-8
 # Allow loading dynamic agent used by JOL
 -XX:+EnableDynamicAgentLoading
+# https://bugs.openjdk.org/browse/JDK-8327134
+-Djava.security.manager=allow
 ```
 
 You must adjust the value for the memory used by Trino, specified with `-Xmx`
